# LightDance-Editor-Server-Rust

./: .env  .gitignore  Cargo.toml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: main.rs
src/extractors/: authentication.rs
src/graphql/: mod.rs  schema.rs  subscriptor.rs
src/graphql/mutations/: color.rs
src/graphql/queries/: color.rs  mod.rs
src/graphql/subscriptions/: color.rs
src/graphql/types/: color.rs  color_map.rs  mod.rs
