[package]
name = "prisma"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
resolver = "2"
members = ["prisma-cli"]

[dependencies]
async-graphql = "6.0.6"
async-graphql-axum = "6.0.6"
axum = "0.6.20"
dotenv = "0.15.0"
futures-channel = "0.3.28"
futures-core = "0.3.28"
futures-util = "0.3.28"
once_cell = "1.18.0"
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", branch = "main", version = "0.6.8", features = [
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "bb1c2d3", version = "0.6.8" }
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", version = "0.6.10", tag = "0.6.10" }
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "bb1c2d3", version = "0.6.8" }
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", version = "0.6.10" }
# prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", rev = "bb1c2d3", features = [
# # prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", features = [
    "migrations",
    "postgresql",
], default-features = false }
redis = { version = "0.23.3", features = ["tokio-comp"] }
serde = "1.0.188"
slab = "0.4.9"
tokio = { version = "1.32.0", features = ["full"] }
tower = "0.4.13"
